Fix problem with extra space on right side

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: rgb(236, 236, 236);
+    max-width: 100vw;
 }
 
 :root {
