--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -66,7 +66,7 @@ button {
 /* Section - 2 blues dialog field */
 .content--2 {
   margin: 0 auto;
-  display: inline-flex;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   height: 50px;
